增加jdk函数注入